@@ -15,7 +15,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, ubuntu-24.04-arm, macos-latest, windows-latest]
         emacs-version:
-          - 27.2
           - 28.2
           - 29.4
           - 30.1
@@ -33,9 +32,6 @@ jobs:
           - os: windows-latest
             emacs-version: snapshot
             experimental: true
-        exclude:
-          - os: macos-latest
-            emacs-version: 27.2
 
     steps:
     - uses: jcs090218/setup-emacs@master
