@@ -29,7 +29,7 @@
  "lsp-semantic-tokens.el"
  "clients/*.el")
 
-(depends-on "emacs" "27.1")
+(depends-on "emacs" "28.1")
 (depends-on "dash")
 (depends-on "f")
 (depends-on "ht")
